--- a/weatherReportPro/Templates/weather.html
+++ b/weatherReportPro/Templates/weather.html
@@ -27,9 +27,10 @@
                         <div class="field has-addons">
                             <div class="control is-expanded">
                                 <input class="input" type="text" placeholder="City Name">
+                                {{ form.name }}
                             </div>
                             <div class="control">
-                                <button class="button is-info">
+                                <button type="submit" class="button is-info">
                                     Add City
                                 </button>
                             </div>
@@ -43,6 +44,7 @@
         <div class="container">
             <div class="columns">
                 <div class="column is-offset-4 is-4">
+                    {% for city_weather in weather_data %}
                     <div class="box">
                         <article class="media">
                             <div class="media-left">
@@ -62,6 +64,7 @@
                             </div>
                         </article>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
